--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,9 +38,18 @@ dependencies:
   image_picker: ^0.8.7+1
   path_provider: ^2.0.14
 
+  #Hive Database
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  build_runner: ^2.4.1
+  hive_generator: ^2.0.0
+    
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
