[ADD] Photo to Asset folders for test and import into pubsec.yaml

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   #Hive Database
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  intl: ^0.18.0
+  sizer: ^2.0.15
   
 
 dev_dependencies:
@@ -73,6 +75,9 @@ flutter:
   assets:
   
    - 'Assets/imageProfile.png'
+   - 'Assets/student_profile.png'
+   - 'Assets/nullImage.png'
+   - 'Assets/nullBackground.png'
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
