--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   hive_flutter: ^1.1.0
   intl: ^0.18.0
   sizer: ^2.0.15
+  hidden_drawer_menu: ^3.0.1
   
 
 dev_dependencies:
@@ -78,6 +79,8 @@ flutter:
    - 'Assets/student_profile.png'
    - 'Assets/nullImage.png'
    - 'Assets/nullBackground.png'
+   - 'Assets/icon-english-10.png'
+   - 'Assets/italian.png'
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
