--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   intl: ^0.18.0
   sizer: ^2.0.15
   hidden_drawer_menu: ^3.0.1
+  table_calendar: ^3.0.9
   
 
 dev_dependencies:
@@ -81,6 +82,8 @@ flutter:
    - 'Assets/nullBackground.png'
    - 'Assets/icon-english-10.png'
    - 'Assets/italian.png'
+   - 'Assets/profileImageStock.png'
+   - 'Assets/profile.png'
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
