--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   hive_flutter: ^1.1.0
   intl: ^0.18.0
   sizer: ^2.0.15
+  hidden_drawer_menu: ^3.0.1
+  rive: ^0.10.4
   
 
 dev_dependencies:
